<resources>
    <string name="app_label_name">Йога</string>
    <string name="app_label_edit">Занятие</string>
    <string name="app_label_backup">Бэкапы</string>
    <string name="app_label_date">Дата</string>
    <string name="app_label_summary">Статистика по месяцам</string>

    <string name="appbar_scrolling_view_behaviour">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="hint_price">Стоимость занятия</string>
    <string name="hint_comment">Комментарий</string>
    <string name="hint_people">Количество человек</string>
    <string name="hint_date">Дата</string>

    <string name="add">Добавить</string>
    <string name="delete">Удалить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="text_view_date">Дата</string>
    <string name="text_view_price">Цена</string>
    <string name="text_view_people">Человек</string>
    <string name="text_view_type">Класс</string>
    <string name="text_view_duration">Время</string>
    <string name="text_view_studio">Студия</string>
    <string name="text_view_place">Место</string>

    <string name="backup_write_error">Проблема с записью на SD-карту!</string>
    <string name="backup_no_sd">Внимание! SD-карта не доступна, бэкап не будет работать!</string>
    <string name="restore_backup">"Восстановить из бэкапа: "</string>
    <string name="delete_backup">"Удалить бэкап: "</string>

    <string name="menu_backup">Бэкапы</string>
    <string name="menu_summary">Итоги</string>

    <string name="price">%1$d ₽</string>

    <string name="navigation_view_open">Открыть</string>
    <string name="navigation_view_close">Закрыть</string>
    <string name="row_count">%1$d занятий</string>

    <string name="progress_dialog_load_data_from_db">Выгрузка данных из базы, жди…</string>
    <string name="progress_dialog_save_data_to_sd">Сохранение данных в файл, жди…</string>
    <string name="progress_dialog_load_data_from_sd">Загрузка данных из файла, жди…</string>

    <string name="write_storage_required">Это нужно включить для работы программы!</string>
    <string name="write_storage_unavailable">Бэкапы теперь делать нельзя!</string>

    <string name="pay_type_minus">Долг</string>
    <string name="pay_type_ok">OK</string>
    <string name="pay_type_plus">Переплата</string>

</resources>
