<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <Button android:id="@+id/button_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"/>


    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:rowCount="5">

        <Spinner
            android:id="@+id/spinner_place"
            android:layout_width="0dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1" />

        <RelativeLayout
            android:layout_width="0dp"
            android:padding="10dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="4">

            <SeekBar
                android:id="@+id/seekbar_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_view_people"
                android:max="15" />

            <TextView
                android:id="@+id/text_view_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2" />

        <Spinner
            android:id="@+id/spinner_duration"
            android:layout_width="0dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="3" />

        <Spinner
            android:id="@+id/spinner_studio"
            android:layout_width="0dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:text="@string/text_view_people"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="4" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:text="@string/text_view_studio"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:text="@string/text_view_place"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:text="@string/text_view_type"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:text="@string/text_view_duration"
            app:layout_column="0"
            app:layout_row="3" />

    </android.support.v7.widget.GridLayout>

    <info.hoang8f.android.segmented.SegmentedGroup
        android:orientation="horizontal"
        android:padding="10.0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        segmentedgroup:sc_tint_color="@color/colorAccent"
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto">

        <RadioButton
            android:id="@+id/button_pay_type_minus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pay_type_minus"
            style="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/button_pay_type_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pay_type_ok"
            style="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/button_pay_type_plus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pay_type_plus"
            style="@style/RadioButton"/>

    </info.hoang8f.android.segmented.SegmentedGroup>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_price" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_text_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comment"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>